--- a/trunk/euro2012/application/fixtures/matches.yml
+++ b/trunk/euro2012/application/fixtures/matches.yml
@@ -1,6 +1,6 @@
 matches:
  m1:
-  match_name: Group A Match 1
+  match_name: Groep A Wedstrijd 1
   match_number: 11
   home_id: 1
   away_id: 2
@@ -11,7 +11,7 @@ matches:
   time_close: 2012/06/08 18:00:00
   description: A1-A2
  m2:
-  match_name: Group A Match 2
+  match_name: Groep A Wedstrijd 2
   match_number: 12
   home_id: 3
   away_id: 4
@@ -22,7 +22,7 @@ matches:
   time_close: 2012/06/08 20:45:00
   description: A3-A4
  m3:
-  match_name: Group B Match 1
+  match_name: Groep B Wedstrijd 1
   match_number: 21
   home_id: 5
   away_id: 6
@@ -33,7 +33,7 @@ matches:
   time_close: 2012/06/09 18:00:00
   description: B1-B2
  m4:
-  match_name: Group B Match 2
+  match_name: Groep B Wedstrijd 2
   match_number: 22
   home_id: 7
   away_id: 8
@@ -44,7 +44,7 @@ matches:
   time_close: 2012/06/09 19:45:00
   description: B3-B4
  m5:
-  match_name: Group C Match 1
+  match_name: Groep C Wedstrijd 1
   match_number: 31
   home_id: 9
   away_id: 10
@@ -55,7 +55,7 @@ matches:
   time_close: 2012/06/10 18:00:00
   description: C1-C2
  m6:
-  match_name: Group C Match 2
+  match_name: Groep C Wedstrijd 2
   match_number: 32
   home_id: 11
   away_id: 12
@@ -66,7 +66,7 @@ matches:
   time_close: 2012/06/10 20:45:00
   description: C3-C4
  m7:
-  match_name: Group D Match 1
+  match_name: Groep D Wedstrijd 1
   match_number: 41
   home_id: 15
   away_id: 16
@@ -77,7 +77,7 @@ matches:
   time_close: 2012/06/11 18:00:00
   description: D3-D4
  m8:
-  match_name: Group D Match 2
+  match_name: Groep D Wedstrijd 2
   match_number: 42
   home_id: 13
   away_id: 14
@@ -88,7 +88,7 @@ matches:
   time_close: 2012/06/11 20:45:00
   description: D1-D2
  m9:
-  match_name: Group A Match 3
+  match_name: Groep A Wedstrijd 3
   match_number: 13
   home_id: 2
   away_id: 4
@@ -99,7 +99,7 @@ matches:
   time_close: 2012/06/12 16:00:00
   description: A2-A4
  m10:
-  match_name: Group A Match 4
+  match_name: Groep A Wedstrijd 4
   match_number: 14
   home_id: 1
   away_id: 3
@@ -110,7 +110,7 @@ matches:
   time_close: 2012/06/12 20:45:00
   description: A1-A3
  m11:
-  match_name: Group B Match 3
+  match_name: Groep B Wedstrijd 3
   match_number: 23
   home_id: 5
   away_id: 7
@@ -121,7 +121,7 @@ matches:
   time_close: 2012/06/13 18:00:00
   description: B1-B3
  m12:
-  match_name: Group B Match 4
+  match_name: Groep B Wedstrijd 4
   match_number: 24
   home_id: 6
   away_id: 8
@@ -132,7 +132,7 @@ matches:
   time_close: 2012/06/13 18:00:00
   description: B2-B4
  m13:
-  match_name: Group C Match 3
+  match_name: Groep C Wedstrijd 3
   match_number: 33
   home_id: 10
   away_id: 12
@@ -143,7 +143,7 @@ matches:
   time_close: 2012/06/14 18:00:00
   description: C2-C4
  m14:
-  match_name: Group C Match 4
+  match_name: Groep C Wedstrijd 4
   match_number: 34
   home_id: 9
   away_id: 11
@@ -154,7 +154,7 @@ matches:
   time_close: 2012/06/14 20:45:00
   description: C1-C3
  m15:
-  match_name: Group D Match 3
+  match_name: Groep D Wedstrijd 3
   match_number: 43
   home_id: 14
   away_id: 16
@@ -165,7 +165,7 @@ matches:
   time_close: 2012/06/15 18:00:00
   description: D2-D4
  m16:
-  match_name: Group D Match 4
+  match_name: Groep D Wedstrijd 4
   match_number: 44
   home_id: 13
   away_id: 15
@@ -176,7 +176,7 @@ matches:
   time_close: 2012/06/15 20:45:00
   description: D1-D3
  m17:
-  match_name: Group A Match 5
+  match_name: Groep A Wedstrijd 5
   match_number: 15
   home_id: 2
   away_id: 3
@@ -187,7 +187,7 @@ matches:
   time_close: 2012/06/16 20:45:00
   description: A2-A3
  m18:
-  match_name: Group A Match 6
+  match_name: Groep A Wedstrijd 6
   match_number: 16
   home_id: 4
   away_id: 1
@@ -198,7 +198,7 @@ matches:
   time_close: 2012/06/16 20:45:00
   description: A4-A1
  m19:
-  match_name: Group B Match 5
+  match_name: Groep B Wedstrijd 5
   match_number: 25
   home_id: 8
   away_id: 5
@@ -209,7 +209,7 @@ matches:
   time_close: 2012/06/17 20:45:00
   description: B4-B1
  m20:
-  match_name: Group B Match 6
+  match_name: Groep B Wedstrijd 6
   match_number: 26
   home_id: 6
   away_id: 7
@@ -220,7 +220,7 @@ matches:
   time_close: 2012/06/17 20:45:00
   description: B2-B3
  m21:
-  match_name: Group C Match 5
+  match_name: Groep C Wedstrijd 5
   match_number: 35
   home_id: 12
   away_id: 9
@@ -231,7 +231,7 @@ matches:
   time_close: 2012/06/18 20:45:00
   description: C4-C1
  m22:
-  match_name: Group C Match 6
+  match_name: Groep C Wedstrijd 6
   match_number: 36
   home_id: 10
   away_id: 11
@@ -242,7 +242,7 @@ matches:
   time_close: 2012/06/18 20:45:00
   description: C2-C3
  m23:
-  match_name: Group D Match 5
+  match_name: Groep D Wedstrijd 5
   match_number: 45
   home_id: 14
   away_id: 15
@@ -253,7 +253,7 @@ matches:
   time_close: 2012/06/19 20:45:00
   description: D2-D3
  m24:
-  match_name: Group D Match 6
+  match_name: Groep D Wedstrijd 6
   match_number: 46
   home_id: 16
   away_id: 13
@@ -264,7 +264,7 @@ matches:
   time_close: 2012/06/19 20:45:00
   description: D4-D1
  m25:
-  match_name: Quarter Final 1
+  match_name: Kwart Finale 1
   match_number: 51
   home_id: 50
   away_id: 53
@@ -275,9 +275,9 @@ matches:
   group_home: A
   group_away: B
   time_close: 2012/06/21 20:45:00
-  description: Winner Group A - Runner Up Group B
+  description: Winnaar Groep A - Tweede Groep B
  m26:
-  match_name: Quarter Final 2
+  match_name: Kwart Finale 2
   match_number: 52
   home_id: 52
   away_id: 51
@@ -288,9 +288,9 @@ matches:
   group_home: B
   group_away: A
   time_close: 2012/06/22 20:45:00
-  description: Winner Group B - Runner Up Group A
+  description: Winnaar Groep B - Tweede Groep A
  m27:
-  match_name: Quarter Final 3
+  match_name: Kwart Finale 3
   match_number: 53
   home_id: 54
   away_id: 57
@@ -301,9 +301,9 @@ matches:
   group_home: C
   group_away: D
   time_close: 2012/06/23 20:45:00
-  description: Winner Group C - Runner Up Group D
+  description: Winnaar Groep C - Tweede Groep D
  m28:
-  match_name: Quarter Final 4
+  match_name: Kwart Finale 4
   match_number: 54
   home_id: 56
   away_id: 55
@@ -314,9 +314,9 @@ matches:
   group_home: D
   group_away: C
   time_close: 2012/06/24 19:45:00
-  description: Winner Group D - Runner Up Group C
+  description: Winnaar Groep D - Tweede Groep C
  m29:
-  match_name: Semi Final 1
+  match_name: Halve Finale 1
   match_number: 61
   home_id: 80
   away_id: 82
@@ -327,9 +327,9 @@ matches:
   group_home: AB
   group_away: CD
   time_close: 2012/06/27 20:45:00
-  description: Winner QF1 - Winner QF3
+  description: Winnaar QF1 - Winnaar QF3
  m30:
-  match_name: Semi Final 2
+  match_name: Halve Finale 2
   match_number: 62
   home_id: 81
   away_id: 83
@@ -340,9 +340,9 @@ matches:
   group_home: AB
   group_away: CD
   time_close: 2012/06/28 20:45:00
-  description: Winner QF2 - Winner QF4
+  description: Winnaar QF2 - Winnaar QF4
  m31:
-  match_name: Final
+  match_name: Finale
   match_number: 99
   home_id: 90
   away_id: 91
@@ -353,5 +353,5 @@ matches:
   group_home: ABCD
   group_away: ABCD
   time_close: 2012/07/01 20:45:00
-  description: Winner SF1 - Winner SF2
+  description: Winnaar SF1 - Winnaar SF2
 
